Bug #35844 - fix for double scrollbar

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -606,6 +606,14 @@ div.page-wrapper {
     }
   }
 
+  .table-responsive-wider {
+    > .flex-column {
+      overflow: hidden;
+      margin-right: -2.2857143em;
+      padding-right: 2.2857143em;
+    }
+  }
+
   .marketplace-container {
     display: flex;
     flex-flow: column;
